fix: image-editor: adjust overlapping text issue

--- a/src/features/image-editor/image-editor.component.scss
+++ b/src/features/image-editor/image-editor.component.scss
@@ -4,9 +4,9 @@
 
 .edit-container {
     img {
-     width: 500px;
-     height: 250px;
- }
+        width: 500px;
+        height: 250px;
+    }
 }
 
 .preview-container {
@@ -23,6 +23,4 @@
 
 .reupload {
     font-size: 12px;
-    position: absolute;
-    left: 20%;
 }
