--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,7 @@ button {
 .modal-title {
     font-size: 25px;
     margin: 10px;
+    vertical-align: middle;
 }
 
 .modal-header {
